# SuperMarioClone

./: .gitignore  CMakeLists.txt
Game/: CMakeLists.txt
Game/levels/: firstLevel
Game/src/: main.cpp
Game/src/engine/: Animation.cpp  ResourceManager.cpp  ResourceManager.h
Game/src/game/: Block.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  TextLabel.h
LevelEditor/: CMakeLists.txt
LevelEditor/src/: main.cpp
LevelEditor/src/LevelEditor/: ChosenSprite.h  LevelEditor.cpp  LevelEditor.h
LevelEditor/src/engine/: ResourceManager.cpp  ResourceManager.h
LevelEditor/src/gameElements/: TextLabel.cpp
common/: GameSettings.h  TextLabel.h  TextureCoords.h
include/: GameSettings.h  LevelData.h
src/: main.cpp
src/engine/: Animation.h  Physics.cpp  Physics.h  ResourceManager.cpp  ResourceManager.h
src/game/: Block.cpp  Block.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h
